# FreqTrading

./: .flake8  .gitignore  Brain.md  Brain_X.md  CLAUDE.md  CLAUDE_MEMORY.md  DECISIONS.md  PLAN_FUNDAMENTAL_BRAIN.md  PROGRESS.md  README.md  STATUS.md  STRATEGY.md  True_Open_Sweep_Strategy.pine  pyproject.toml  requirements-dev.txt  requirements.txt
data/: btcusd_h1_20230814_20260705.csv  btcusd_h2_20230814_20260705.csv  btcusd_h4_20230814_20260705.csv  btcusd_m30_20230814_20260705.csv  btcusd_m45_20230814_20260705.csv  btcusd_m90_20230814_20260705.csv  us100_h1_20220317_20260703.csv  us100_h2_20220317_20260703.csv  us100_h4_20220317_20260703.csv  us100_m30_20220317_20260703.csv  us100_m45_20220317_20260703.csv  us100_m90_20220317_20260703.csv  us500_m30_20220317_20260703.csv  us500_m45_20220317_20260703.csv  us500_m90_20220317_20260703.csv  xagusd_m30_20220411_20260703.csv  xagusd_m45_20220411_20260703.csv  xagusd_m90_20220411_20260703.csv  xauusd_1m_20260529_20260612.csv  xauusd_h1_20220410_20260703.csv  xauusd_h2_20220410_20260703.csv  xauusd_h4_20220410_20260703.csv  xauusd_m30_20220410_20260703.csv  xauusd_m45_20220410_20260703.csv  xauusd_m90_20220410_20260703.csv
docs/: copytrade_schema.md
leader/: __init__.py  __main__.py  follower_example.py  pub.py  server.py  store.py
macro/: __init__.py  __main__.py  backtest.py  blackout.py  build.py  daemon.py  geopolitics.py  normalizer.py  scorer.py  sensitivity.py  sentiment.py  state_writer.py  thematic.py
mql5/: SmcBtc_EA.mq5  SmcUs100_EA.mq5  SmcUs500_EA.mq5  SmcXag_EA.mq5  SmcXau_EA.ex5  SmcXau_EA.mq5
(+127 files in other folders)
